fix image border too wide

--- a/src/stylus/_main_frame.styl
+++ b/src/stylus/_main_frame.styl
@@ -78,7 +78,7 @@ header
     display: none
 
 .imageFrame
-  max-width: 900px
+  max-width: 720px
   width: calc(100% - 64px)
   @media(max-width: 900px)
     width: 100%
